--- a/src/assets/styles/Navbar.scss
+++ b/src/assets/styles/Navbar.scss
@@ -1,7 +1,8 @@
 @import 'global';
 .navbar{
-  flex: 0.2;
+  flex: 0.13;
   background-color: $backGroundColor;
+  width: 272px;
 }
 
 .nav-container{
@@ -25,3 +26,13 @@
 .logo a{
  color: white;
 }
+.menu-control-container{
+    display: none !important;
+    position: absolute !important;
+    right: 10px !important;
+    top: 25px !important;
+    font-size: 1.2rem !important;
+    background-color: var(--bgSecondary) !important;
+    border: none !important;
+}
+
