navbar responsive ok

--- a/src/assets/styles/MediaQueries.scss
+++ b/src/assets/styles/MediaQueries.scss
@@ -20,7 +20,7 @@
       position:fixed;
       width: 100%;
       z-index: 100;
-      background-color: var(--bgSecondary);
+      background-color: #800000;
   }
 
   .menu-control-container{
