--- a/src/assets/styles/CryptoDetails.scss
+++ b/src/assets/styles/CryptoDetails.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border-bottom: 1px solid var(--border);
+  border-bottom: 1px solid #d9d9d9;
   padding-top: 20px;
   padding-bottom: 20px;
   gap: 10px;
@@ -33,7 +33,7 @@
   font-weight: 700;
   font-size: 1.4rem;
   margin-top: 20px;
-  color: var(--pink);
+  color:$backGroundColor;
 }
 }
 .coin-value-statistics-heading p{
