--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -24,7 +24,7 @@ background-color: $backGroundColor;
 
 .navbar{
   flex: 0.2;
-  background-color: rgb(0, 21, 41);
+  background-color: $backGroundColor;
 }
 
 .main{
